--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packets.html
@@ -163,7 +163,7 @@
 					${item.end_time}
 				</td>
 				<td>
-					${item.type}
+					${item.red_packet_type}
 				</td>
 				<td>
 					${item.status}
