--- a/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/workbench.html
@@ -226,7 +226,7 @@
             "start_time": startTime,
             "end_time": endTime,
             "timing": timing,
-            "type": red_packet_type,
+            "red_packet_type": red_packet_type,
             "random_total_money": random_total_money,
             "random_packets_number": random_packets_number,
             "regular_packets_number": regular_packets_number,
