--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -29,8 +29,8 @@
                 <input type="checkbox" id="topSelectAll" class="xa-selectAll">全选
             </label>
             <a href="javascript:void(0);" class="btn btn-default ml10 xa-batchOffshelf">批量放入待售</a>
-            <a href="/mall2/product/" class="btn btn-primary ml10 xa-offshelf xui-offshelf-btn fr">
-                查看下架商品
+            <a href="javascript:void(0);" class="btn btn-primary ml10 xa-checkOffshelf xui-offshelf-btn fr">
+                查看失效商品
             </a>
         </div>
         <div
@@ -41,7 +41,7 @@
         data-enable-paginator="true"
         data-enable-sort="false"
         data-selectable="true"
-        data-item-count-per-page="12"
+        data-item-count-per-page="8"
         data-disable-header-select="true"
         data-outer-selecter='.xa-selectAll'
         class="panel-body"
@@ -56,7 +56,7 @@
 {% block js %}
 {% verbatim %}
 <script id="products-view" type="text/x-jquery-tmpl">
-    <table id="productListTable" class="table table-bordered table-condensed xui-productList xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg">
+    <table id="productListTable" class="table table-bordered table-condensed xui-productList xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg {{if items.length == 0}}mb50{{/if}}">
         <thead>
             <tr>
                 <th width="250">商品信息</th>
@@ -107,7 +107,7 @@
                         <span class="cRed">已选择</span>
                         {{/if}}
                     </td>
-                    <td class="xui-createdTime">${product.created_at}</td>
+                    <td class="xui-createdTime">${product.sync_time}</td>
                     <td>
                         {{if product.status == 1}}
                         <a href="javascript:void(0);" class="xa-update">更新</a>
@@ -122,7 +122,7 @@
                 </tr>
                 {{/each}}
             {{else}}
-                <tr><td colspan='7'>还没有数据</td></tr>
+                <tr><td colspan='6'>还没有数据</td></tr>
             {{/if}}
         </tbody>
     </table>
