--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -70,7 +70,7 @@
         <tbody id='product_list'>
             {{if items.length}}
                 {{each(i, product) items}}
-                <tr data-id="${product.id}" class="xa-selectTr" data-product-has-promotion="${product.product_has_promotion}">
+                <tr data-id="${product.id}" class="xa-selectTr" data-product-has-promotion="${product.product_has_promotion}" data-product-status="${product.status}">
                     <td class="wui-advanced-table-sort-handler tl_important">
                         <div class="disT w">
                             <div class="imgBox disTc pr xui-imgBox vm">
