商品池--批量发货

--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -34,9 +34,9 @@
             </a>
         </div>
         <div
-        data-ui-role="advanced-table"
+        data-ui-role="pool-advanced-table"
         data-app="mall2"
-        data-resource="product_pool"
+        data-api="product_pool"
         data-template-id="#products-view"
         data-enable-paginator="true"
         data-enable-sort="false"
@@ -45,7 +45,6 @@
         data-disable-header-select="true"
         data-outer-selecter='.xa-selectAll'
         class="panel-body"
-        data-selecttable-tr='xa-selectTr'
     ></div>
     <label for="bottomSelectAll" class="xui-selectAll ml12 xui-bottomSelectAll">
         <input type="checkbox" id="bottomSelectAll" class="xa-selectAll">全选
