--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -25,7 +25,7 @@
 			<a href="/mall2/product/" class="btn btn-success xui-addProductBtn ml10 xa-addProduct fr"><span style="padding-right:5px;"><img src="/static_v2/img/editor/plusOpcity.png"></span>添加新商品</a>
 		</div>
 		<div
-			data-ui-role="offshelf-advanced-table"
+			data-ui-role="advanced-table"
 			data-app="mall2"
 			data-api="product_list"
 			data-args='{"type":"offshelf"}'
@@ -78,12 +78,12 @@
 		<thead>
 			<tr>
 				<th width="308">商品信息</th>
-				<th width="100">{{if mall_type}}供货商{{else}}条码{{/if}}</th>
+				<th width="100">{{if data.data.mall_type == 1}}供货商{{else}}条码{{/if}}</th>
 				<th width="100">分组</th>
 				<th width="105">商品价格（元）</th>
 				<th width="50">库存</th>
 				<th width="50">总销量</th>
-				<th width="120">{{if mall_type}}同步{{else}}创建{{/if}}时间</th>
+				<th width="120">{{if data.data.mall_type == 1 }}同步{{else}}创建{{/if}}时间</th>
 				<th width="110">操作</th>
 			</tr>
 		</thead>
@@ -116,7 +116,7 @@
 							</div>
 						</div>
 					</td>
-					<td>{{if mall_type}}${product.store_name}{{else}}${product.bar_code}{{/if}}</td>
+					<td>{{if data.data.mall_type == 1}}${product.store_name}{{else}}${product.bar_code}{{/if}}</td>
 					<td>
 						<ul>
 							{{each(i, category) product.categories}}
@@ -144,13 +144,13 @@
 						{{/if}}
 					</td>
 					<td>${product.sales}</td>
-					<td>{{if mall_type}}${product.sync_time}{{else}}${product.created_at}{{/if}}</td>
+					<td>{{if data.data.mall_type == 1}}${product.sync_time}{{else}}${product.created_at}{{/if}}</td>
 					<td>
 					   <div style=" width:74px; margin:auto;">
 						<a href="/mall2/product/?id=${product.id}" class="xa-modify fl" style="width: 39px;">
 						{{if product.is_self}}修改{{else}}审核{{/if}}</a>
 						<!-- 微众系列-未填写采购价时 -->
-						{{if product.purchase_price == "0"}}
+						{{if product.purchase_price == "0" && data.data.mall_type == 1}}
 							<span class="fl c6">上架</span>
 						{{else}}
 							<a href="javascript:void(0);" class="xa-onshelf fl">上架</a>
