--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -27,7 +27,7 @@
 			</a>
 		</div>
 		<div
-		data-ui-role="advanced-table"
+		data-ui-role="products-advanced-table"
 		data-app="mall2"
 		data-resource="product_list"
 		data-template-id="#products-view"
