添加商品列表的供货商搜索

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -60,7 +60,7 @@
 				<label class="control-label fl star_show" for="supplier">供货商：</label>
 				<div class="fl">
             <select disabled="disabled" class="w106 ml5">
-						<option value="{{ product.store_name }}">{{ product.store_name }}</option>
+						<option value="{{ store_name }}">{{ store_name }}</option>
 					</select>
 				</div>
 			</div>
