--- a/weapp/static_v2/js/view/mall_product_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_product_filter_view/template.html
@@ -6,7 +6,7 @@
 			<input type="text" class="form-control" id="name" name="name" value="" />
 		</div>
 		<div class="xui-i-item">
-			{{if mall_type}}
+			{{if mall_type == 1}}
 			<label>供货商：</label>
 			<input type="text" class="form-control" id="supplier" name="supplier" value="" />
 			{{else}}
