--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -173,7 +173,8 @@
 $(document).ready(function() {
 	var view = new W.view.mall.ProductListView({
 		el: '.xui-productsPage',
-		type: 'offshelf'
+		type: 'offshelf',
+		mall_type: '{{ mall_type }}'
 	});
 	view.render();
 });
