--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -75,7 +75,7 @@
 			<!-- 微众精选结束 -->
 				{% if supplier|length %}
 				<div class="form-group">
-					<label class="control-label fl star_show" for="supplier">供货商：{{product.has_store_name}}</label>
+					<label class="control-label fl star_show" for="supplier">供货商：</label>
 					<div class="fl">
 	                {% if product.supplier %}
 	                        <input type="hidden" name="supplier" value="{{ product.supplier }}"/>
