--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -13,10 +13,10 @@
 		</li>
 		<li class="active">{% if product %}更新{% else %}添加新{% endif %}商品</li>
 	</ul>
-  {% if mall_type %}
+  {% if mall_type and not product %}
 	<ul class="nav nav-tabs" style="border:none;">
 		<li class="active">
-			<a href="/mall2/product/">{% if product %}更新{% else %}添加新{% endif %}商品</a>
+			<a href="/mall2/product/">添加新商品</a>
 		</li>
 		<li>
 			<a href="/mall2/product_pool/">商品池</a>
@@ -312,7 +312,7 @@
 	         	{%endif%}
 				</div>
 			</div>
-			{% if is_bill %}
+			{% if is_bill or not has_store_name %}
             <div class="form-group">
                 <label class="control-label col-sm-2 col-sm-offset-1">商品发票：</label>
                 <div class="col-sm-9" style="margin-top: -6px;margin-left:-20px;">
