--- a/weapp/static_v2/js/view/mall_product_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_product_filter_view/template.html
@@ -49,7 +49,7 @@
 		</div class="xui-i-item">
 
 		<div class="xui-i-item">
-		{{if mall_type}}
+		{{if mall_type == 1}}
 			<label>同步时间：</label>
 		{{else}}
 			<label>创建时间：</label>
