新增百宝箱团购活动

--- a/weapp/apps/app_template/templates/webapp/record_template.html
+++ b/weapp/apps/app_template/templates/webapp/record_template.html
@@ -1,4 +1,4 @@
-<% extends "webapp_content_base_v4.html" %>
+<% extends "apps_base.html" %>
 __STRIPPER_TAG__
 <% block css %>
 <style type="text/css">
